--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/menu.css
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/wwwroot/css/menu.css
@@ -1,5 +1,28 @@
-﻿.panel-title-right-align{
-    color: white;
-    padding-right: 10px;
+﻿.panel-group .panel {
+    border-radius: 0;
+    box-shadow: none;
+    border-color: #EEEEEE;
 }
 
+.panel-default > .panel-heading {
+    padding: 0;
+    border-radius: 0;
+    color: #212121;
+    background-color: #FAFAFA;
+    border-color: #EEEEEE;
+}
+
+
+.panel-title > a {
+    display: block;
+    text-decoration: none;
+}
+
+.more-less {
+    float: right;
+    color: #212121;
+}
+
+.panel-default > .panel-heading + .panel-collapse > .panel-body {
+    border-top-color: #EEEEEE;
+}
