--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/_ViewImports.cshtml
@@ -1,6 +1,9 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using NetCoreCMS.Framework.Core.Models
 @using NetCoreCMS.Core.Modules.Cms
 @using NetCoreCMS.Core.Modules.Cms.Models
 @using NetCoreCMS.Core.Modules.Cms.Models.ManageViewModels
 @using NetCoreCMS.Core.Modules.Cms.Models.AccountViewModels
+@using NetCoreCMS.Modules.Cms.Models.ViewModels;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
