--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -1,124 +1,47 @@
 ﻿@using NetCoreCMS.Framework.Utility
+@using System.Collections
+@model List<NccPage>
 @{
     Layout = Constants.AdminLayoutName;
 }
 
 <script src="~/lib/ckeditor/ckeditor.js"></script>
 <link href="/NetCoreCMS.Modules.Cms/css/page.css" rel="stylesheet" />
-<script src="/NetCoreCMS.Modules.Cms/js/page.js"></script>
+<script src="/NetCoreCMS.Modules.Cms/js/managePage.js"></script>
 
 
 <div class="row">
-    <div class="col-sm-12">        
-        <div class="col-sm-8 pull-left">
-            
-            <h3>Create New Page</h3>
-
-            <form asp-controller="CmsPage" asp-action="Index" method="post">
-                <div>
-                    <label>Title</label>
-                    <input type="text" class="form-control" id="Title" name="Title" />
-                </div>
-                <div>
-                    <label>Slug</label>
-                    <label>http://yourdomain.com/CmsPage/</label><input type="text" class="form-control" id="Slug" name="Slug" />
-                </div>
-                <div>
-                    <label>Page Content</label>
-                    <textarea id="content"></textarea>
-                </div>
-                
-                <div>
-                    <label>Meta Description</label>
-                    <textarea class="form-control"></textarea>
-                </div>
-
-                <div>
-                    <label>Meta Keyword</label>
-                    <textarea class="form-control"></textarea>
-                </div>
-
-            </form>
+    <div class="col-sm-12">    
+        <div style="width:200px;">
+            <div class="col-sm-6"><h3>Pages</h3></div>
+            <div class="col-sm-6" style="padding-top:15px;"><input class="btn btn-primary" type="button" value="Add New" /></div>
+            <div style="clear:both;"></div>
         </div>
-        <div class="col-sm-4 pull-right">
-            <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-                <div class="panel panel-primary">
-                    <div class="panel-heading" role="tab" id="headingOne">
-                        <div class="panel-title">
-                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                <i class="more-less glyphicon glyphicon-chevron-down" style="color:white;"></i>
-                                Publish
-                            </a>
-                        </div>
-                    </div>
-                    <div id="collapseOne" class="panel-collapse" role="tabpanel" aria-labelledby="headingOne">
-                        <div class="panel-body">
-                            <div>
-                                <label>Status</label>
-                                <select class="form-control">
-                                    <option>Draft</option>
-                                    <option>Review</option>
-                                    <option>Published</option>
-                                    <option>Unpublished</option>
-                                    <option>Archived</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label>Visibility</label>
-                                <select class="form-control">
-                                    <option>Public</option>
-                                    <option>Privet</option>                                    
-                                </select>
-                            </div>
-                            <div>
-                                <label>Schedule Date</label>
-                                <input type="text" class="form-control" />
-                            </div>
-                            <div>
-                                <label>Add to Navigation Menu</label>
-                                <input type="checkbox" class="checkbox" />
-                            </div>
-                        </div>
-                        <div class="panel-footer">
-                            <div class="pull-left">
-                                <button id="saveDraft" class="btn btn-sm btn-default" type="button">Save Draft</button>
-                            </div>
-                            <div class="pull-right">
-                                <button id="publish" class="btn btn-sm btn-primary" type="button">Publish</button>
-                            </div>
-                            <div style="clear:both;"></div>
-                        </div>
-                    </div>
-                </div>   
-                <div class="panel panel-primary">
-                    <div class="panel-heading" role="tab" id="headingTwo">
-                        <div class="panel-title">
-                            <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                                <i class="more-less glyphicon glyphicon-chevron-down" style="color:white;"></i>
-                                Atributs
-                            </a>
-                        </div>
-                    </div>
-                    <div id="collapseTwo" class="panel-collapse " role="tabpanel" aria-labelledby="headingTwo">
-                        <div class="panel-body">
-                            <div>
-                                <label>Parent Page:</label>
-                                <select class="form-control">
-                                    <option>Page1</option>
-                                    <option>Page2</option>
-                                    <option>Page3</option>
-                                    <option>Page4</option>
-                                </select>
-                            </div>
-                            <div>
-                                <label>Order</label>
-                                <input type="tel" class="form-control" />
-                            </div>
-                        </div>                         
-                    </div>
-                </div>
-            </div>
-        </div>
+        <br/>
+        <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <thead>
+                <tr><th>Title</th><th>Author</th><th>PublishDate</th><th>Status</th><th>Order</th><th>Action</th></tr>
+            </thead>
+            <tbody>
+                @foreach (var page in Model)
+                {
+                    <tr>
+                        <td>@page.Title</td>
+                        <td>@page.CreateBy</td>
+                        <td>@page.PublishDate</td>
+                        <td>@page.PageStatus</td>
+                        <td>@page.PageOrder</td>
+                        <td>
+                            <a asp-controller="CmsPage" asp-action="Index">Edit</a> |
+                            <a asp-controller="CmsPage" asp-action="Index">Delete</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
     </div>
 </div>
 
+<link href="~/lib/DataTables/DataTables-1.10.13/css/dataTables.bootstrap.css" rel="stylesheet" />
+<script src="~/lib/DataTables/datatables.js"></script>
+<script src="~/lib/DataTables/DataTables-1.10.13/js/dataTables.bootstrap.js"></script>
