--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -42,6 +42,8 @@
     </div>
 </div>
 
-<link href="~/lib/DataTables/DataTables-1.10.13/css/dataTables.bootstrap.css" rel="stylesheet" />
-<script src="~/lib/DataTables/datatables.js"></script>
-<script src="~/lib/DataTables/DataTables-1.10.13/js/dataTables.bootstrap.js"></script>
+@section Scripts{
+    <link href="~/lib/DataTables/DataTables-1.10.13/css/dataTables.bootstrap.css" rel="stylesheet" />
+    <script src="~/lib/DataTables/datatables.js"></script>
+    <script src="~/lib/DataTables/DataTables-1.10.13/js/dataTables.bootstrap.js"></script>    
+}
